# statment

./: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml  package-lock.json
.claude/: settings.json
backend/: .env.example  Dockerfile  main.py  pyproject.toml  seed.py  seed_extra.py
backend/alembic/: env.py
backend/alembic/versions/: 221d96af3a9b_initial_schema.py  b4b29053ad3e_add_telegram_clients_and_issues.py  c1d3e5f7a9b2_add_telegram_id_to_users.py  d2e4f6a8c0b1_add_faculty_id_to_users.py  e3f5a7b9c1d2_add_device_type_to_inventory.py
backend/app/: rabbitmq.py  websocket.py
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/models/: __init__.py  employees.py  faculty.py  inventory.py  issues.py  rooms.py  statement.py  telegram_clients.py  user.py
backend/app/models/mixins/: id_int_pk.py  time_stamp_mixin.py
backend/app/repositories/: __init__.py  base.py  employees.py  faculty.py  inventory.py  issues.py  rooms.py  statement.py  telegram_clients.py  user.py
backend/app/routers/: __init__.py  auth.py  employees.py  faculty.py  inventory.py  issues.py  rooms.py  telegram.py  users.py
backend/app/schemes/: __init__.py  base.py  employees.py  faculty.py  inventory.py  issues.py  rooms.py  statement.py  telegram_clients.py  user.py
backend/app/services/: auth.py
client-bot/: .env.example  Dockerfile  config.py  main.py  pyproject.toml  redme.md  requirements.txt  states.py
frontend/: .dockerignore  DESIGN.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
(+46 files in other folders)
