[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.34.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.20",
    "aio-pika>=9.6.2",
]
